<resources>
    <string name="app_name">Caller Name Announcer</string>
    <string name="this_action_can_contain_ad">This action can contain ad</string>
    <string name="facebook_app_id">273871568578072</string>
    <string name="language_english" translatable="false">English</string>
    <string name="language_spain" translatable="false">Spanish</string>
    <string name="language_portugal" translatable="false">Portuguese</string>
    <string name="language_italian" translatable="false">Italian</string>
    <string name="language_hindi" translatable="false">भारतीय भाषा</string>
    <string name="language_liberia" translatable="false">Liberia</string>
    <string name="language_germany" translatable="false">German</string>
    <string name="language_brazil" translatable="false">Lingua Brasilia</string>
    <string name="language_japan" translatable="false">日本</string>
    <string name="language_greece" translatable="false">Greek</string>
    <string name="language_korean" translatable="false">한국어</string>
    <string name="language_france" translatable="false">French</string>
    <string name="language_vietnamese" translatable="false">Vietnamese</string>
    <string name="language_china" translatable="false">中国人</string>
    <string name="select_languages">Select Language</string>
    <string name="languages_first_open" translatable="false">Language</string>
    <string name="caller_announcer">Caller Announcer</string>
    <string name="sms_announcer">SMS Announcer</string>
    <string name="setting">Setting</string>
    <string name="ringer_mode">Ringer mode</string>
    <string name="mute_mode">Mute mode</string>
    <string name="call_notification_on_ringer_mode">Call notification on ringer mode</string>
    <string name="call_notification_in_silent_mode">Call notification in silent mode</string>
    <string name="vibrate_mode">Vibrate mode</string>
    <string name="call_notification_in_vibrate_mode">Call notification in vibrate mode</string>
    <string name="flash">Flash</string>
    <string name="call_notification">Call notification</string>
    <string name="unknown_number">Unknown number</string>
    <string name="unknown_display_with_numbers_not_in_contacts">Unknown display with numbers not in contacts</string>
    <string name="name">Name</string>
    <string name="display_and_read_the_username">Display and read the username</string>
    <string name="turn_on">Turn on</string>
    <string name="turn_off">Turn off</string>
    <string name="change_default_dialer">Change default dialer</string>
    <string name="you_are_required_to_set_call_announcer_as_default_dialer_to_announce_caller_name_and_manage_calls_to_work_properly">You are required to set Call Announcer as default dialer to announce caller name and manage calls to work properly</string>
    <string name="allow">Allow</string>
    <string name="cancel">Cancel</string>
    <string name="device_ringtone">Device ringtone</string>
    <string name="_onboarding_1_title">Announce Caller name and SMS on your phone</string>
    <string name="_onboarding_2_title">Simple and modern interface</string>
    <string name="_onboarding_3_title">The best assistant for you</string>
    <string name="_onboarding_1_description">Call identify and SMS identify in any mode if you are physically busy</string>
    <string name="_onboarding_2_description">The interface is simple, modern and helps users to experience calling easily.</string>
    <string name="_onboarding_3_description">Bring you a great experience with interesting features</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="_get_started">Get Started</string>
    <string name="ringstone">Ringtone</string>
    <string name="ringtone_volume">Ringtone volume</string>
    <string name="sound_in_the_device">Sound in the device</string>
    <string name="search">Search</string>
    <string name="_terms_of_service">Terms of service</string>
    <string name="_privacy_policy">Privacy policy</string>
    <string name="share">Share</string>
    <string name="selection_of_ringstones_in_your_library">Selection of ringstones in your library</string>
    <string name="language">Language</string>
    <string name="change_the_application_language">Change the application language</string>
    <string name="selection_of_ringtones_in_your_library">Selection of ringtones in your library</string>
    <string name="privacy_and_terms">Privacy and Terms</string>
    <string name="terms">Terms</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the_1500s_when_an_unknown_printer_took_a_galley_of_type_and_scrambled_it_to_make_a_type_specimen_book_it_has_survived_not_only_five_centuries_but_also_the_leap_into_electronic_typesetting_remaining_essentially_unchanged_it_was_popularised_in_the_1960s_with_the_release_of_letraset_sheets_containing_lorem_ipsum_passages_and_more_recently_with_desktop_publishing_software_like_aldus_pagemaker_including">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including</string>
    <string name="changes_with_service_and_terms">Changes with Service and Terms</string>
    <string name="lorem_ipsum_is_simply">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including</string>
    <string name="t_amp_c"><![CDATA[T & C]]></string>
    <string name="not_found_ringtones">Not Found Ringtones</string>
    <string name="in_order_to_use_this_app_we_need_your_permission_to_modify_some_system_settings_on_your_device">In order to use this app, we need your permission to modify some system settings on your device</string>
    <string name="deny">Deny</string>
    <string name="later">Later</string>
    <string name="we_need_the_following_permissions_to_work_properly">We need the following permissions to work properly</string>
    <string name="phone">Phone</string>
    <string name="to_detect_incoming_calls">To detect incoming calls</string>
    <string name="contacts">Contacts</string>
    <string name="required_for_contacts_notification">Required for contacts notification</string>
    <string name="audio_recorder">Audio recorder</string>
    <string name="required_for_call">Required for call</string>
    <string name="we_need_some_permissions">We need some permissions</string>
    <string name="to_work_properly_we_need_some_permissions_please_go_to_settings_and_give_us_permission">To work properly we need some permissions, please go to settings and give us permission</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="read_messages_when_someone_sends_them">Read messages when someone sends them</string>
    <string name="sms">SMS</string>
    <string name="volume_settings">Volume settings</string>
    <string name="set_volume">Set volume</string>
    <string name="speaking_speed">Speaking speed</string>
    <string name="battery_announcer">Battery announcer</string>
    <string name="other">Other</string>
    <string name="set_battery_threshold_for_notifications">Set battery threshold for notifications</string>
    <string name="permission">Permission</string>
    <string name="you_need_camera_permission_to_use_this_feature">You need camera permission to use this feature</string>

    <string name="phone_number">Phone number </string>
    <string name="incoming_call">Incoming call</string>
    <string name="you_have_an_incoming_call">You have an incoming call</string>
    <string name= "there_is_a_message_with_content" > There is a message with content</string>
    <string name= "message_from" > Message from</string>
    <string name= "with_content" > with content</string>

    <string name="to_make_a_type_specimen_book_it_has_survived_not_only_five_centuries_but_also_the_leap_into_electronic_typesetting_remaining_essentially_unchanged_it_was_popularised_in_the_1960s_with_the_release_of_letraset_sheets_containing_lorem_ipsum_passages_and_more_recently_with_desktop_publishing_software_like_aldus_pagemaker_including">to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including</string>
</resources>