<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/_15sdp"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ic_arrow_left_policy"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            app:srcCompat="@drawable/arrow_left"
            android:padding="@dimen/_4sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/privacy_and_terms"
            android:textColor="@color/black"
            android:textSize="@dimen/_19sdp">
        </TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/terms"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:gravity="center_vertical"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginTop="@dimen/_6sdp"
                android:text="@string/lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the_1500s_when_an_unknown_printer_took_a_galley_of_type_and_scrambled_it_to_make_a_type_specimen_book_it_has_survived_not_only_five_centuries_but_also_the_leap_into_electronic_typesetting_remaining_essentially_unchanged_it_was_popularised_in_the_1960s_with_the_release_of_letraset_sheets_containing_lorem_ipsum_passages_and_more_recently_with_desktop_publishing_software_like_aldus_pagemaker_including"
                android:textColor="@color/color_description_text"
                android:textSize="@dimen/_12ssp" />
            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/changes_with_service_and_terms"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="match_parent"
                android:gravity="center_vertical"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/lorem_ipsum_is_simply"
                android:textColor="@color/color_description_text"
                android:textSize="@dimen/_12ssp" />
            <TextView
                android:id="@+id/textView27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/t_amp_c"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/_15sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="match_parent"
                android:gravity="center_vertical"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/to_make_a_type_specimen_book_it_has_survived_not_only_five_centuries_but_also_the_leap_into_electronic_typesetting_remaining_essentially_unchanged_it_was_popularised_in_the_1960s_with_the_release_of_letraset_sheets_containing_lorem_ipsum_passages_and_more_recently_with_desktop_publishing_software_like_aldus_pagemaker_including"
                android:textColor="@color/color_description_text"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>