<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:paddingTop="@dimen/_20sdp"
    android:paddingBottom="@dimen/_15sdp"
    android:paddingHorizontal="@dimen/_15sdp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ic_close"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:padding="@dimen/_6sdp"
        android:src="@drawable/ic_close_permission"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/style_content_call_announcer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sms_announcer"
        android:textSize="@dimen/_18ssp"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintBottom_toBottomOf="@+id/ic_close"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ic_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_user_permission"
        app:layout_constraintTop_toBottomOf="@id/ic_close"
        android:layout_marginVertical="@dimen/_10sdp"
        />

    <TextView
        android:id="@+id/tv_content_permission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/we_need_the_following_permissions_to_work_properly"
        android:textColor="@color/black"
        android:textSize="@dimen/_15ssp"
        android:gravity="center"
        android:layout_marginVertical="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintTop_toBottomOf="@id/ic_user"
        />

    <LinearLayout
        android:id="@+id/ll_permission_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_30sdp"
        app:layout_constraintTop_toBottomOf="@id/tv_content_permission"
        >
        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="match_parent"
            android:padding="@dimen/_4sdp"
            android:src="@drawable/ic_sms_permission"
            />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginHorizontal="@dimen/_10sdp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sms"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/black"
                android:singleLine="true"
                android:ellipsize="end"
                android:fontFamily="@font/poppins_medium"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/read_messages_when_someone_sends_them"
                android:textSize="@dimen/_12ssp"
                android:textColor="#66707A"
                android:singleLine="true"
                android:ellipsize="end"
                android:fontFamily="@font/poppins_regular"
                />
        </LinearLayout>

        <ImageView
            android:id="@+id/ic_select_sms"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="match_parent"
            android:padding="@dimen/_6sdp"
            android:visibility="invisible"
            android:src="@drawable/ic_select_permission"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_permission_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_30sdp"
        app:layout_constraintTop_toBottomOf="@id/ll_permission_phone"
        >
        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="match_parent"
            android:padding="@dimen/_4sdp"
            android:src="@drawable/ic_contact_permission"
            />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginHorizontal="@dimen/_10sdp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contacts"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/black"
                android:singleLine="true"
                android:ellipsize="end"
                android:fontFamily="@font/poppins_medium"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/required_for_contacts_notification"
                android:textSize="@dimen/_12ssp"
                android:textColor="#66707A"
                android:singleLine="true"
                android:ellipsize="end"
                android:fontFamily="@font/poppins_regular"
                />
        </LinearLayout>

        <ImageView
            android:id="@+id/ic_select_contact"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="match_parent"
            android:padding="@dimen/_6sdp"
            android:visibility="invisible"
            android:src="@drawable/ic_select_permission"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_permission_audio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_30sdp"
        app:layout_constraintTop_toBottomOf="@id/ll_permission_contact"
        >
        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="match_parent"
            android:padding="@dimen/_4sdp"
            android:src="@drawable/ic_micro_permission"
            />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginHorizontal="@dimen/_10sdp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/audio_recorder"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/black"
                android:singleLine="true"
                android:ellipsize="end"
                android:fontFamily="@font/poppins_medium"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/required_for_call"
                android:textSize="@dimen/_12ssp"
                android:textColor="#66707A"
                android:singleLine="true"
                android:ellipsize="end"
                android:fontFamily="@font/poppins_regular"
                />
        </LinearLayout>

        <ImageView
            android:id="@+id/ic_select_audio"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="match_parent"
            android:padding="@dimen/_6sdp"
            android:visibility="invisible"
            android:src="@drawable/ic_select_permission"
            />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_Allow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#7288FA"
        android:layout_weight="1"
        android:layout_marginVertical="@dimen/_30sdp"
        android:layout_marginHorizontal="@dimen/_40sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/ll_permission_audio"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/allow"
            android:padding="@dimen/_6sdp"
            android:textSize="@dimen/_15ssp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>