<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusable="true"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_20sdp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_default_dialer"
                android:paddingHorizontal="@dimen/_10sdp"
                android:gravity="center"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginVertical="@dimen/_15sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                android:fontFamily="@font/poppins_semibold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/you_are_required_to_set_call_announcer_as_default_dialer_to_announce_caller_name_and_manage_calls_to_work_properly"
                android:gravity="center"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:textColor="#434E58"
                android:textSize="@dimen/_14ssp"
                android:fontFamily="@font/poppins_regular"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginVertical="@dimen/_15sdp"
                >
                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:padding="@dimen/_10sdp"
                    android:textSize="@dimen/_16ssp"
                    android:textColor="#66707A"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="center"
                    />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#7288FA"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    app:cardCornerRadius="@dimen/_20sdp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/allow"
                        android:padding="@dimen/_10sdp"
                        android:textSize="@dimen/_16ssp"
                        android:textColor="@color/white"

                        android:fontFamily="@font/poppins_semibold"
                        android:gravity="center"
                        />
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>