<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/tt_transparent"
    android:layout_gravity="center"
    android:focusable="true"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_20sdp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/we_need_some_permissions"
                android:paddingHorizontal="@dimen/_10sdp"
                android:gravity="center"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginVertical="@dimen/_15sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                android:fontFamily="@font/poppins_semibold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/to_work_properly_we_need_some_permissions_please_go_to_settings_and_give_us_permission"
                android:gravity="center"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:textColor="#434E58"
                android:textSize="@dimen/_14ssp"
                android:fontFamily="@font/poppins_regular"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                >
                <TextView
                    android:id="@+id/tv_Cancel"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/later"
                    android:padding="@dimen/_6sdp"
                    android:textSize="@dimen/_16ssp"
                    android:textColor="#66707A"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="center"
                    />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_Allow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#7288FA"
                    android:layout_weight="1"
                    app:cardCornerRadius="@dimen/_20sdp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/go_to_settings"
                        android:paddingVertical="@dimen/_6sdp"
                        android:textSize="@dimen/_16ssp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/poppins_semibold"
                        android:gravity="center"
                        />
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>